// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`twMerge > twMerge case 0.js 1`] = `"twMerge('bg-[#434332] px-[32px]', 'bg-[#123324] px-[35px]')"`;

exports[`twMerge > twMerge case 0.js 2`] = `"twMerge('bg-_h434332_ px-_32px_', 'bg-_h123324_ px-_35px_')"`;

exports[`twMerge > twMerge case 1.js 1`] = `
"const a = 'bg-[#434332] px-[32px]'

twMerge(a, 'bg-[#123324] px-[35px]')"
`;

exports[`twMerge > twMerge case 1.js 2`] = `
"const a = 'bg-_h434332_ px-_32px_'

twMerge(a, 'bg-_h123324_ px-_35px_')"
`;

exports[`twMerge > twMerge case 2.js 1`] = `
"const a = 'bg-[#434332]'

twMerge(\`px-[32px] \${a}\`, 'bg-[#123324] px-[35px]')

twMerge0(\`px-_32px_ \${a}\`, 'bg-_h123324_ px-_35px_')"
`;

exports[`twMerge > twMerge case 2.js 2`] = `
"const a = 'bg-_h434332_'

twMerge(\`px-_32px_ \${a}\`, 'bg-_h123324_ px-_35px_')

twMerge0(\`px-_32px_ \${a}\`, 'bg-_h123324_ px-_35px_')"
`;

exports[`twMerge > twMerge case 3.js 1`] = `
"// Strings (variadic)
clsx('px-[35px]', true && true && 'px-[35px]' , 'px-[35px]');
//=> 'foo bar baz'
const cc = \`px-[35px]\`
// Objects
clsx({ 'px-[35px]': true, 'px-[35px]': false, [\`px-[35px] \${cc}\`]: isTrue() });
//=> 'foo baz'

// Objects (variadic)
clsx({ 'px-[35px]': true }, { 'px-[35px]': false }, null, { 'px-[35px]': 'hello' });
//=> 'foo --foobar'

// Arrays
clsx(['px-[35px]', 0, false && 'px-[35px]', 'px-[35px]']);
//=> 'foo bar'

// Arrays (variadic)
clsx(['px-[35px]'], ['', 0, false, 'px-[35px]'], [['px-[35px]', [['px-[35px]'], 'px-[35px]']]]);
//=> 'foo bar baz hello there'

// Kitchen sink (with nesting)
clsx('px-[35px]', [1 && 'px-[35px]', { 'px-[35px]': false, 'px-[35px]': null }, ['px-[35px]', ['px-[35px]']]], 'px-[35px]');
//=> 'foo bar hello world cya'"
`;

exports[`twMerge > twMerge case 3.js 2`] = `
"// Strings (variadic)
clsx('px-_35px_', true && true && 'px-_35px_' , 'px-_35px_');
//=> 'foo bar baz'
const cc = \`px-_35px_\`
// Objects
clsx({ 'px-_35px_': true, 'px-_35px_': false, [\`px-_35px_ \${cc}\`]: isTrue() });
//=> 'foo baz'

// Objects (variadic)
clsx({ 'px-_35px_': true }, { 'px-_35px_': false }, null, { 'px-_35px_': 'hello' });
//=> 'foo --foobar'

// Arrays
clsx(['px-_35px_', 0, false && 'px-_35px_', 'px-_35px_']);
//=> 'foo bar'

// Arrays (variadic)
clsx(['px-_35px_'], ['', 0, false, 'px-_35px_'], [['px-_35px_', [['px-_35px_'], 'px-_35px_']]]);
//=> 'foo bar baz hello there'

// Kitchen sink (with nesting)
clsx('px-_35px_', [1 && 'px-_35px_', { 'px-_35px_': false, 'px-_35px_': null }, ['px-_35px_', ['px-_35px_']]], 'px-_35px_');
//=> 'foo bar hello world cya'"
`;

exports[`twMerge > twMerge case 4.js 1`] = `
"const obj = {
  a: 'px-[35px]',
  b: {
    c: 'px-[35px]'
  },
  d: ['px-[35px]']
}

const arr = ['px-[35px]']

clsx('px-[35px]', obj.a, obj.b.c, obj.d[0], arr[0]);"
`;

exports[`twMerge > twMerge case 4.js 2`] = `
"const obj = {
  a: 'px-_35px_',
  b: {
    c: 'px-_35px_'
  },
  d: ['px-_35px_']
}

const arr = ['px-_35px_']

clsx('px-_35px_', obj.a, obj.b.c, obj.d[0], arr[0]);"
`;

exports[`twMerge > twMerge case 5.js 1`] = `
"const obj = {
  a: 'px-[35px]',
  b: {
    c: 'px-[35px]'
  },
  d: arr
}

const arr = ['px-[35px]', obj]

clsx('px-[35px]', obj.a, obj.b.c, obj.d[0], arr[0]);"
`;

exports[`twMerge > twMerge case 5.js 2`] = `
"const obj = {
  a: 'px-_35px_',
  b: {
    c: 'px-_35px_'
  },
  d: arr
}

const arr = ['px-_35px_', obj]

clsx('px-_35px_', obj.a, obj.b.c, obj.d[0], arr[0]);"
`;
